--- a/style.css
+++ b/style.css
@@ -3,25 +3,34 @@
     padding: 0;
     box-sizing: border-box;
     text-align: center;
+    font-family: Whitney,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 
+/* header */
 header {
     position: relative;
-    height: 100px;
-    background-color: dodgerblue;
-    color: white;
+    height: 80px;
+    background-color: #3161e0;
 }
 
-nav {
+.logo {
+    position: absolute;
+    top: 40%;
+    left: 10%;
+}
+
+.container {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    color: white;
 }
 
 nav span {
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 12px;
+    margin-right: 12px;
+    font-size: 13px;
 }
 
 .login {
@@ -29,4 +38,48 @@ nav span {
     background-color: white;
     padding: 10px;
     border-radius: 20px;
+    margin-left: 40px;
+    position: absolute;
+    top: 35%;
+    right: 10%;
+    font-size: 13px;
+}
+
+/* jumbotron */
+section div {
+ height: 400px;
+}
+
+section img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+    position: relative;
+}
+
+section h1 {
+    font-size: 45px;
+    margin-bottom: 25px;
+}
+
+section p {
+    font-size: 18px;
+}
+
+.buttons {
+    margin-top: 25px;
+}
+
+.download {
+    color: black;
+    background-color: white;
+    padding: 15px;
+    border-radius: 25px;
+    margin-left: 20px;
+}
+
+.open_browser {
+    background-color: #23272a;
+    padding: 15px;
+    border-radius: 25px;
 }
