--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    text-align: center;
     font-family: Whitney,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 
@@ -25,6 +24,7 @@ header {
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
+    text-align: center;
 }
 
 nav span {
@@ -91,12 +91,15 @@ section p {
     clear: both;
     position: relative;
     width: 100%;
-    height: 530px;
+    height: 400px;
     text-align: left;
 }
 
-.col_sx {
+.float {
     float: left;
+}
+
+.col_sx {
     width: 50%;
     height: 400px;
     padding-left: 250px;
@@ -107,8 +110,7 @@ section p {
     width: 500px;
 }
 
-.col_dx {    
-    float: left;
+.col_dx {
     width: 50%;
     height: 400px;
     position: relative;
@@ -119,4 +121,73 @@ section p {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.text_first_section h1 {
+    margin-bottom: 20px;
+}
+
+.text_first_section p {
+    line-height: 20px;
+}
+
+/* footer */
+footer {    
+    height: 300px;
+    background-color: #23272a;
+}
+
+.footer_margin {    
+    height: 300px;
+    margin-left: 200px;
+    margin-right: 200px;
+}
+
+/* prima colonna */
+.first_column {
+    /* background-color: red; */
+    width: 300px;
+    height: 300px;
+}
+
+.first_column h1{
+    color: #7188d8;
+    padding-top: 30px;
+}
+
+.first_column img {
+    width: 20px;
+    border-radius: 2px;
+    margin-top: 15px;
+}
+
+.first_column span {
+    color: white;
+    font-size: 12px;
+    vertical-align: center;
+}
+
+/* seconda colonna */
+.second_column {
+    background-color: pink;
+    width: 180px;
+    height: 300px;
+}
+
+.third_column {
+    background-color: blue;
+    width: 180px;
+    height: 300px;
+}
+
+.fourth_column {
+    background-color: green;
+    width: 180px;
+    height: 300px;
+}
+
+.fifth_column {
+    background-color: yellow;
+    width: 180px;
+    height: 300px;
 }
